force-app/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <description>Records individual bid history for auction listings</description>
    <label>Bid</label>
    <nameField>
        <displayFormat>BID-{0000}</displayFormat>
        <label>Bid Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>