force-app/main/default/objects/Bid__c/fields/Auction_Listing__c.field-meta.xml
<CustomField>
    <fullName>Auction_Listing__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The auction listing this bid belongs to</description>
    <label>Auction Listing</label>
    <referenceTo>Auction_Listing__c</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>