force-app/main/default/objects/Bid__c/fields/Bid_Time__c.field-meta.xml
<CustomField>
    <fullName>Bid_Time__c</fullName>
    <label>Bid Time</label>
    <type>DateTime</type>
</CustomField>